--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
   ],
   "license": "MIT",
   "devDependencies": {
+    "@commitlint/cli": "^8.3.4",
+    "@commitlint/config-conventional": "^8.3.4",
     "@microsoft/api-documenter": "^7.7.2",
     "@microsoft/api-extractor": "^7.7.0",
     "@propero/ngm": "^1.2.3",
