--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -2,11 +2,12 @@
   "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "./tsconfig.json",
   "include": [
-    "src/**/*.ts"
+    "src/**/*.ts",
+    "src/**/*.tsx"
   ],
   "exclude": [
     "node_modules",
-    "test/**/*.ts",
-    "test/**/*.tsx"
+    "tests/**/*.ts",
+    "tests/**/*.tsx"
   ]
 }
