--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "build": "rollup --config build/rollup.config.js",
     "clean": "rimraf dist temp docs coverage",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "lint": "eslint --ignore-path .gitignore --ext .ts .",
     "lint:fix": "eslint --ignore-path .gitignore --ext .ts --fix ."
   },
