--- a/package.json
+++ b/package.json
@@ -19,16 +19,16 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/propero-oss/vue-extra-decorators.git"
+    "url": "git+https://github.com/rocketbase-io/vue-extra-decorators.git"
   },
   "keywords": [
     "vuejs",
     "decorators",
     "typescript"
   ],
-  "author": "Rocketbase Team <team@propero.dev>",
+  "author": "Rocketbase Team <team@rocketbase.io>",
   "contributors": [
-    "Merlin Reichwald <merlin.reichwald@rocketbase.io"
+    "Merlin Reichwald"
   ],
   "license": "MIT",
   "devDependencies": {
@@ -72,7 +72,7 @@
     "vue-class-component": "^7.1.0"
   },
   "bugs": {
-    "url": "https://github.com/propero-oss/vue-extra-decorators/issues"
+    "url": "https://github.com/rocketbase-io/vue-extra-decorators/issues"
   },
   "husky": {
     "hooks": {
@@ -85,5 +85,5 @@
       "eslint --fix --ext .ts,.js"
     ]
   },
-  "homepage": "https://github.com/propero-oss/vue-extra-decorators#readme"
+  "homepage": "https://github.com/rocketbase-io/vue-extra-decorators#readme"
 }
