--- a/.releaserc.json
+++ b/.releaserc.json
@@ -7,6 +7,7 @@
     ["@semantic-release/github", {
       "assets": ["./*.zip"]
     }],
+    "@qiwi/semantic-release-gh-pages-plugin",
     "@semantic-release/git",
     "@semantic-release/npm"
   ]
