chore: add 3 examples, readme text

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
     ],
     "paths": {
       "src/*": ["./src/*"],
-      "tests/*": ["./tests/*"]
+      "tests/*": ["./tests/*"],
+      "@rocketbase/vue-extra-decorators": ["./src/main.ts"]
     },
     "lib": [
       "esnext",
