--- a/package.json
+++ b/package.json
@@ -68,8 +68,9 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "vue": "^2.6.11",
-    "vue-class-component": "^7.2.3"
+    "mitt": "^1.2.0",
+    "vue": "^3.0.0-beta.20",
+    "vue-class-component": "^8.0.0-alpha.6"
   },
   "bugs": {
     "url": "https://github.com/rocketbase-io/vue-extra-decorators/issues"
