--- a/package.json
+++ b/package.json
@@ -34,42 +34,42 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@commitlint/cli": "^8.3.5",
-    "@commitlint/config-conventional": "^8.3.4",
-    "@qiwi/semantic-release-gh-pages-plugin": "^1.15.9",
-    "@semantic-release/changelog": "^5.0.0",
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4",
+    "@qiwi/semantic-release-gh-pages-plugin": "^5.0.7",
+    "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/commit-analyzer": "^8.0.1",
     "@semantic-release/git": "^9.0.0",
-    "@semantic-release/github": "^7.0.4",
-    "@semantic-release/npm": "^7.0.4",
-    "@semantic-release/release-notes-generator": "^9.0.1",
-    "@types/jest": "^26.0.0",
-    "@types/lodash": "^4.14.149",
-    "@types/node": "^13.9.0",
-    "@typescript-eslint/eslint-plugin": "^2.23.0",
-    "@typescript-eslint/parser": "^2.23.0",
-    "@wessberg/rollup-plugin-ts": "^1.2.21",
-    "bestzip": "^2.1.5",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.9.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "husky": "^4.2.0",
-    "jest": "^26.0.1",
+    "@semantic-release/github": "^7.2.3",
+    "@semantic-release/npm": "^7.1.3",
+    "@semantic-release/release-notes-generator": "^9.0.2",
+    "@types/jest": "^26.0.23",
+    "@types/lodash": "^4.14.170",
+    "@types/node": "^15.12.0",
+    "@typescript-eslint/eslint-plugin": "^4.26.0",
+    "@typescript-eslint/parser": "^4.26.0",
+    "@wessberg/rollup-plugin-ts": "^1.3.14",
+    "bestzip": "^2.2.0",
+    "eslint": "^7.27.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "husky": "^6.0.0",
+    "jest": "^27.0.4",
     "jest-preset-typescript": "^1.2.0",
-    "lint-staged": "^10.0.8",
-    "prettier": "^1.19.1",
-    "rollup": "^1.32.1",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-sourcemaps": "^0.5.0",
-    "rollup-plugin-ts-paths": "^1.0.3",
-    "semantic-release": "^17.0.4",
-    "ts-jest": "^26.1.0",
-    "typedoc": "^0.16.11",
-    "typescript": "^3.8.3"
+    "lint-staged": "^11.0.0",
+    "prettier": "^2.3.0",
+    "rollup": "^2.50.6",
+    "@rollup/plugin-commonjs": "^19.0.0",
+    "rollup-plugin-sourcemaps": "^0.6.3",
+    "rollup-plugin-ts-paths": "^1.0.5",
+    "semantic-release": "^17.4.3",
+    "ts-jest": "^27.0.2",
+    "typedoc": "^0.20.36",
+    "typescript": "^4.3.2"
   },
   "dependencies": {
-    "vue": "^2.6.11",
-    "vue-class-component": "^7.2.3"
+    "vue": "^2.6.13",
+    "vue-class-component": "^7.2.6"
   },
   "bugs": {
     "url": "https://github.com/rocketbase-io/vue-extra-decorators/issues"
